<resources>
    <string name="app_name">GDG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_long">Google Developer Group\nJalandhar</string>
    <string name="app_name_semi">Google Developers</string>
    <string name="welcome">Welcome</string>
    <string name="using_google_account">Continue with Google</string>
    <string name="welcome_message">Google Developer Groups (GDGs) are for developers who are
    interested in Google\'s Developer Technology\; Everything from Android, Chrome, Drive, and Google
        Cloud Platforms to Product API, Maps API, and Youtube API.\n\n\n
        A GDG can take many forms —from just a few people getting together to watch Google\'s Latest
        Videos,to large gatherings with demos and tech talks, to events like code sprints and hackathons.
        However at the core GDGs are focused on developers and technical contents, and the core audience should be developers.
    </string>
    <string name="logging_in">Wait with Patience…</string>
    <string name="google_play_service_error">Error : Cannot Connect to Google Play</string>
    <string name="connecting_with_google">Connecting with Google…</string>
    <string name="authenticating_you">Authenticating…</string>
    <string name="auth_error">Failed to Log In</string>
    <string name="database_check">Checking for Profile…</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="low_memory_warn">Low Memory : Application may not work as expected</string>
    <string name="gathering_profile">Fetching the Profile…</string>
    <string name="done">Done…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure_to_leave">Are you sure ?</string>
    <string name="back_message">Do you really want to go back ? \nYou have not completed your Profile,
        going back at this stage will result in loss of all saved progress.</string>
    <string name="profile_complete">Complete the Profile</string>
    <string name="message_profile_create">We appreciate your Choice for Using official GDG Application to get updated about new events around you.
        \n\nIt seems this is the first time you are using our application so,
        we need to complete your profile. This only takes a minute or so.</string>
    <string name="hey">Hey</string>
    <string name="complete_my_profile">Complete My Profile</string>
    <string name="profile_complete_step1">Step 1</string>
    <string name="profile_complete_step2">Step 2</string>
    <string name="profile_complete_step3">Final Step</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="my_gender_is">My Gender is</string>
    <string name="my_name_is">My Username is</string>
    <string name="my_email_is">My Email is</string>
    <string name="step1_info_messages">*  You cannot change this email. \n*  Your Username will be visible to members in the group.</string>
    <string name="my_skills">(Select all that applies)</string>
    <string name="android_skills">Android Development</string>
    <string name="web_skills">Web Development</string>
    <string name="cloud">Google Cloud</string>
    <string name="tensor_flow">TensorFlow</string>
    <string name="firebase_dev">Firebase Development</string>
    <string name="public_skills">Public Speaking</string>
    <string name="promotional">Promotional Skills</string>
    <string name="step3_agree_messages">You agree to all the terms and conditions of Google Developer Group App.</string>
    <string name="my_about_me">Describe Yourself in 3 Lines</string>
    <string name="final_step3_info">* The above text will be visible to public.
        \n* Your Position and Access Level will be upgraded by your leader once verified.
        \n* Currently Your Access Level is set to PUBLIC ACCESS.</string>
    <string name="login_interrupt">Interrupted by User</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="required_field">Required Field</string>
    <string name="checkbox_missing">Oops !! You missed to click the check box.</string>
    <string name="skills_required">You need at least one of the following skills to be in GDG</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="admin_access">Admin Tools</string>
    <string name="notify">Notify</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="add_event">Add Event</string>
    <string name="share_text">Hey, I got this Awesome application named GDG App. It notifies me of all the events of GDG Jalandhar.</string>
    <string name="send_using">Send Using</string>
    <string name="google_developer_group">Google Developer Group</string>
    <string name="designed_and_developed_by_ashar">Designed and Developed by Ashar \nLicensed Under GNU General Public License 2.0</string>
    <string name="sign_out">Sign Out</string>
    <string name="version">Version :</string>
    <string name="sources">Sources</string>
    <string name="denied">Please Re-login : Authentication Denied</string>
    <string name="google_dev">Google Developer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="last_message">Last Notification</string>
    <string name="notification_body">Notification Body</string>
    <string name="notification_title">Notification Title</string>
    <string name="send_with_a_notification_sound">Send with a Notification Sound</string>
    <string name="send">Send</string>
    <string name="missing">Field Missing</string>
    <string name="notified_soon">Message will be delivered soon…</string>
</resources>