<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) Ashar Khan 2017. <ashar786khan@gmail.com>
    This file is part of Google Developer Group's Android Application.
    Google Developer Group 's Android Application is free software : you can redistribute it and/or modify
    it under the terms of GNU General Public License as published by the Free Software Foundation,
    either version 3 of the License, or (at your option) any later version.

    This Application is distributed in the hope that it will be useful
    but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
    or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General  Public License for more details.

    You should have received a copy of the GNU General Public License along with this Source File.
    If not, see <http:www.gnu.org/licenses/>.-->


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/sign_out" />

    </group>

    <group
        android:checkableBehavior="single">
    <item
        android:title="@string/admin_access"
        android:id="@+id/admin_menu"
        android:visible="false">

        <menu>
            <item
                android:id="@+id/nav_notify"
                android:icon="@drawable/ic_notifications_active_black_24dp"
                android:title="@string/notify" />
            <item
                android:id="@+id/nav_add_event"
                android:icon="@drawable/ic_add_black_24dp"
                android:title="@string/add_event" />
        </menu>

    </item>
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_error_black_24dp"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
