<!-- Copyright (c) Ashar Khan 2017. <ashar786khan@gmail.com>
    This file is part of Google Developer Group's Android Application.
    Google Developer Group 's Android Application is free software : you can redistribute it and/or modify
    it under the terms of GNU General Public License as published by the Free Software Foundation,
    either version 3 of the License, or (at your option) any later version.

    This Application is distributed in the hope that it will be useful
    but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
    or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General  Public License for more details.

    You should have received a copy of the GNU General Public License along with this Source File.
    If not, see <http:www.gnu.org/licenses/>.-->


<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.softminds.gdg.fragments.ProfileSetter">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:id="@+id/step_zero_profile_edit"
        android:layout_height="250dp">
    <TextView
        android:id="@+id/profile_edit_message_salutation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/profile_edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/message_profile_create"
        android:textSize="16sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_edit_message_salutation" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:text="@string/complete_my_profile"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/profile_edit_message"
        android:layout_marginTop="16dp"
        android:id="@+id/profile_edit_proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/step_first_profile_edit"
        android:layout_height="250dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/my_name_is"
                android:id="@+id/profile_edit_name"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="5dp"
            android:id="@+id/profile_edit_gender_title"
            android:text="@string/my_gender_is" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:id="@+id/profile_edit_gender_radio_group">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gender_male_radio_button"
                android:text="@string/male"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gender_female_radio_button"
                android:layout_marginStart="5dp"
                android:text="@string/female"/>
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="5dp">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_edit_email"
                android:hint="@string/my_email_is"/>
        </android.support.design.widget.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:textSize="12sp"
        android:id="@+id/profile_edit_info_step1"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/step1_info_messages"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:id="@+id/step_second_profile_edit"
        android:layout_height="250dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="5dp"
            android:id="@+id/profile_edit_skills_title"
            android:text="@string/my_skills" />


        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_skills"
            android:id="@+id/profile_edit_skills_android"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firebase_dev"
            android:id="@+id/profile_edit_skills_firebase"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_skills"
            android:id="@+id/profile_edit_skills_web"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cloud"
            android:id="@+id/profile_edit_skills_cloud"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tensor_flow"
            android:id="@+id/profile_edit_skills_tensorFlow"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/public_skills"
            android:id="@+id/profile_edit_skills_speaking"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promotional"
            android:id="@+id/profile_edit_skills_promo"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/step_third_profile_edit"
        android:layout_height="250dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/my_about_me"
                android:maxLines="3"
                android:lines="3"
                android:id="@+id/profile_edit_about_me"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:textSize="12sp"
            android:text="@string/final_step3_info"
            android:id="@+id/profile_edit_info_step3"
            android:textColor="@android:color/holo_red_dark"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:textSize="12sp"
            android:id="@+id/profile_edit_step3_info"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/step3_agree_messages"/>

    </LinearLayout>

    <Button
        android:id="@+id/profile_edit_proceed_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        android:textColor="@color/colorAccent"
        android:text="@string/next"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_zero_profile_edit" />

    <Button
        android:id="@+id/profile_edit_proceed_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        android:text="@string/back"
        android:textColor="@color/colorAccent"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toStartOf="@+id/profile_edit_proceed_next"
        app:layout_constraintHorizontal_bias="0.84"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_zero_profile_edit" />

</android.support.constraint.ConstraintLayout>
