<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) Ashar Khan 2017. <ashar786khan@gmail.com>
    This file is part of Google Developer Group's Android Application.
    Google Developer Group 's Android Application is free software : you can redistribute it and/or modify
    it under the terms of GNU General Public License as published by the Free Software Foundation,
    either version 3 of the License, or (at your option) any later version.

    This Application is distributed in the hope that it will be useful
    but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
    or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General  Public License for more details.

    You should have received a copy of the GNU General Public License along with this Source File.
    If not, see <http:www.gnu.org/licenses/>.-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_share"
        app:showAsAction="never"
        android:title="@string/share" />
    <item
        android:id="@+id/menu_about_us"
        app:showAsAction="never"
        android:title="@string/about_us" />

    <item
        android:id="@+id/menu_signOut"
        app:showAsAction="never"
        android:title="@string/sign_out" />

</menu>