<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.softminds.gdg.fragments.Notify">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/zzs"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notification_title"
            android:hint="@string/notification_title" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/zzsa"
        app:layout_constraintTop_toBottomOf="@id/zzs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:id="@+id/notification_body"
            android:hint="@string/notification_body" />

    </android.support.design.widget.TextInputLayout>

    <Switch
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/zzsa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/switch_sound"
        android:checked="true"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_bias=".09"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/zzsa"
        app:layout_constraintStart_toEndOf="@id/switch_sound"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/send_with_a_notification_sound"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/send"
        android:id="@+id/send_notification"
        app:layout_constraintTop_toBottomOf="@id/switch_sound"
        android:layout_marginTop="10dp"/>

</android.support.constraint.ConstraintLayout>
